Opened 11 years ago

Closed 11 years ago

#10185 closed bug (fixed)

Notifications: issue with read-only ~/config

Reported by: przemub Owned by: mmadia
Priority: normal Milestone: R1
Component: Preferences/Notifications Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

hrev46333. When you modify something in Notifications preference app and then click save button app throws this error:

Can't save preferences, you probably don't have write access to the boot settings directory.

It's caused by moving autolaunch folder from ~/config/boot/launch to ~/config/settings/boot/launch. Patch is attached.

Attachments (1)

notifications-launch.patch (2.2 KB ) - added by przemub 11 years ago.

Download all attachments as: .zip

Change History (4)

by przemub, 11 years ago

Attachment: notifications-launch.patch added

comment:1 by przemub, 11 years ago

patch: 01

comment:2 by mmadia, 11 years ago

Owner: changed from pulkomandy to mmadia
Status: newin-progress

Looks easy enough to review.

comment:3 by mmadia, 11 years ago

Resolution: fixed
Status: in-progressclosed

Applied in hrev46342. Thanks for the patch!

Note: See TracTickets for help on using tickets.