Notifications: fix issue with launch folder. #10185

* App tried to create symlink in folder ~/config/boot/launch,
what throw an error, because this folder is read-only now.
    * Now it creates such in ~/config/settings/boot/launch.

Signed-off-by: Matt Madia <mattmadia@gmail.com>